Cambios sin terminar
- Se agregó desarrollo e imagenes

--- a/main.tex
+++ b/main.tex
@@ -40,12 +40,14 @@
 \newpage
 
 \pagenumbering{arabic}
+\tableofcontents
+\newpage
 
 \input{sections/resumen.tex}
 \input{sections/introduccion.tex}
 \input{sections/objetivos.tex}
 \input{sections/actividades.tex}
-\input{sections/Marco Teorico.tex}
+\input{sections/marco_teorico.tex}
 \input{sections/diseño.tex}
 \input{sections/driver.tex}
 \input{sections/simulaciones.tex}
