Cambios para V3 incompletos

--- a/sections/actividades.tex
+++ b/sections/actividades.tex
@@ -62,10 +62,9 @@ El proceso se dividió en las siguientes etapas:
 En las siguientes secciones se detallarán cada una de estas etapas,
 enumerando los problemas encontrados y las soluciones propuestas.
 
-\subsection{Implementación}
+\subsection{Implementación y validación}
 Se construyó un prototipo del cargador, realizando una primera aproximación con una placa perforada
 y luego diseñando un circuito impreso para la implementación final.
 
-\subsection{Validación}
-Se realizaron mediciones de tensión y corriente en el circuito implementado,
+Por último, se realizaron mediciones de tensión y corriente en el circuito implementado,
 con el fin de validar los resultados obtenidos en las simulaciones.
