--- a/sections/marco_teorico.tex
+++ b/sections/marco_teorico.tex
@@ -1,22 +1,24 @@
 \section{Marco teórico}
 
-Para reducir el tamaño del transformador y cumplir con las especificaciones normalmente se requieren conversiones de etapas múltiples.
+En esta sección se presenta el desarrollo llevado a cabo para lograr los objetivos propuestos, haciendo énfasis en los aspectos teóricos que fundamentan el proyecto.
+
+Para poder utilizar un transformador pequeño y cumplir con las especificaciones normalmente se requieren conversiones de etapas múltiples.
 Las fuentes de potencia otorgan una alta densidad de potencia en un tamaño y con un peso reducido.  
-Permiten aislar eléctricamente a la carga de la red de alimentación. 
+Además, permiten aislar eléctricamente a la carga de la red de alimentación. 
 %Dirección controlada del flujo de potencia. 
 %Alta eficiencia de conversión. 
-Utilizando pequeños filtros es posible tener formas de onda con baja distorsión armónica tanto en la entrada como en la salida. 
-Permiten controlar el factor de potencia si la fuente es de AC. %Que cosa? Los filtros?
+Utilizando filtros simples es posible tener formas de onda con baja distorsión armónica tanto en la entrada como en la salida. 
+%Permiten controlar el factor de potencia si la fuente es de AC. %Que cosa? Los filtros?
 
 En base a la tensión de salida requerida existen fuentes de alimentación AC y fuentes de alimentación DC.
 Las fuentes de alimentación DC se clasifican en:
 \begin{description}
-    \item[Conmutación]
+    \item[Conmutadas]
     Tienen una alta eficiencia y pueden suministrar altas corrientes de carga a una tensión baja.
     Existen 5 topologías comunes: fly-back, forward, push–pull, half-bridge, y full-bridge.
     Por lo general se utilizan 2 etapas de conversión: DC-AC mediante modulación de ancho de pulso (PWM) de la etapa del inversor y de AC-DC.
-    La salida del inversor, que varía mediante una técnica PWM, se convierte en un voltaje de DC mediante un rectificador de diodos. 
-    Debido a que el inversor puede operar a una frecuencia muy alta, las fluctuaciones en la tensión de salida de DC se pueden filtrar fácilmente con filtros pequeños.
+    La salida del inversor, que varía mediante una señal PWM, se convierte en un voltaje DC mediante un rectificador de diodos. 
+    Debido a que el inversor puede operar a una frecuencia muy alta, las fluctuaciones en la tensión de salida de DC se pueden filtrar fácilmente.
     \item[Resonantes]
     Si la variación del voltaje de salida no es amplia se pueden usar inversores de pulso resonante. 
     La frecuencia del inversor, que podría ser la misma que la frecuencia de resonancia, es muy alta y la tensión de salida del inversor es casi sinusoidal 
@@ -24,26 +26,24 @@ Las fuentes de alimentación DC se clasifican en:
     Los tamaños del transformador y del filtro de salida se reducen debido a la alta frecuencia del inversor.
     \item[Bidireccionales]
     Aptas para carga y descarga de baterías donde el flujo de potencia es bidireccional. 
-    El flujo de potencia depende de la tensión de entrada, de la tensión de salida y de la relación de vueltas del transformador. 
-    Permiten que la corriente inductiva fluya en cualquier dirección y que el flujo de corriente se vuelve continuo.
+    Este último depende de la tensión de entrada, de la tensión de salida y de la relación de vueltas del transformador. 
+    Permiten que la corriente inductiva fluya en cualquier dirección y que el flujo de corriente se vuelva continuo.
     Requiere sintetizar las funciones de conmutación para obtener las formas de onda de salida deseadas.
 \end{description}
 
-Especificaciones de la tensión de salida del prototipo: 12.6VDC
+% Especificaciones de la tensión de salida del prototipo: 12.6VDC
 Para seleccionar una topología adecuada para una aplicación, es necesario comprender las ventajas y desventajas de cada topología y los requisitos de la aplicación. 
 Existen diversas topologías, las cuales serán analizadas en orden creciente de complejidad. 
 Aunque la mayoría de los convertidores se pueden utilizar para cumplir con los requerimientos de salida, 
 los valores nominales del dispositivo de conmutación y el tamaño del transformador limitan sus aplicaciones a una potencia de salida específica. 
 La elección del convertidor depende del requisito de potencia de salida y de la complejidad que se desea afrontar.
 
-\subsection{Conversor Forward}
+\subsection{Convertidor Forward}
 
-El convertidor forward es un convertidor CC-CC acoplado magnéticamente. 
-
-El transistor funciona como interruptor, estará cerrado un tiempo DT y abierto el resto del tiempo,
+Es un convertidor CC-CC acoplado magnéticamente. El transistor funciona como interruptor, estará cerrado un tiempo $DT$ y abierto el resto del tiempo,
 $(1 - D)T$, siendo $T$ el periodo de conmutación. 
 Para el análisis del circuito se supondrá funcionamiento 
-en régimen permanente y que la corriente en la inductancia Lx es permanente.
+en régimen permanente y que la corriente en la inductancia $L_x$ es permanente.
 
 El transformador posee tres devanados: los devanados 1 y 2 transfieren la energía de la
 fuente a la carga cuando el interruptor está cerrado; el devanado 3 se usa para proporcionar un
@@ -53,14 +53,13 @@ con una inductancia magnetizante $L_m$ conectada en paralelo con el devanado 1. 
 de transformador simplificado, no se incluyen las pérdidas ni las inductancias de dispersión.
 
 En el convertidor forward, la energía del generador se transfiere a la carga cuando el interruptor
-está cerrado. En el convertidor flyback, la energía se almacenaba en $L_m$ cuando el conmutador
-estaba cerrado y era transferida a la carga cuando estaba abierto. En el convertidor directo, $L_m$
-es un parámetro no incluido en la relación entrada-salida, y se suele hacer grande su valor
+está cerrado. En el convertidor flyback, la energía se almacena en $L_m$ cuando el conmutador
+esta cerrado y es transferida a la carga cuando esta abierto. En el convertidor directo, $L_m$
+es un parámetro no incluido en la relación entrada-salida, y se suele adoptar un valor grande.
 
 \subsubsection{Análisis con el interruptor cerrado}
 En la Figura $X$ se muestra el circuito equivalente del convertidor forward cuando el interruptor
-está cerrado. Al cerrarse el interruptor se establece una tensión en el devanado 1 del transformador,
-por lo que
+está cerrado. Al cerrarse el interruptor se establece una tensión en el devanado 1 del transformador, por lo que
 
 $$  $$
 
@@ -105,7 +104,7 @@ analiza de la misma manera que la del convertidor CC-CC reductor. La energía al
 la inductancia magnetizante cuando el interruptor está cerrado puede ser devuelta a la fuente de
 entrada a través de un tercer devanado del transformador cuando el interruptor está abierto.
 
-\subsection{Restablecimiento del núcleo del transformador}
+\subsubsection{Restablecimiento del núcleo del transformador}
 La energía almacenada en el núcleo del transformador es devuelta a la fuente regulable y se incrementa la eficiencia. 
 
 A diferencia del convertidor flyback, la energía no se almacena en el primario y sólo se opera 
@@ -113,60 +112,82 @@ en el modo de conducción continua por la mayor dificultad del control en base a
 Asumiendo modo de conducción continua, operación en estado estacionario y ripple de salida nulo, 
 existen 2 modos de operación del transistor:
 
-Cuando el transistor se encuentre encendido:
-
-La tensión en el bobinado primario es $V_s$. La corriente que circula por el mismo comienza a incrementarse 
-y se transfiere energía del primario al secundario y de aquí al filtro de salida y la carga por medio del diodo D2. 
+\paragraph{Cuando el transistor se encuentra encendido}
+La tensión en el bobinado primario es $V_s$. La corriente que circula por el mismo comienza a incrementarse,
+se transfiere energía del primario al secundario y de aquí al filtro de salida y la carga por medio del diodo D2. 
 Debido a esta corriente se induce una corriente en el secundario dada por:
+
+$$  $$
 
 La corriente magnetizante se incrementa linealmente con el tiempo:
 
+$$  $$
+
 La corriente total que circula por el primario resulta:
 
-Cuando finaliza el tiempo de conducción del transistor en un tiempo t=DT, esta corriente total llega a un valor máximo dado por:
+$$  $$
 
-donde XXX es la corriente pico reflejada del inductor de salida del secundario y está dada por:
+Cuando finaliza el tiempo de conducción del transistor en un tiempo $t=DT$, esta corriente total llega a un valor máximo dado por:
+
+$$  $$
+
+donde $X$ es la corriente pico reflejada del inductor de salida del secundario y está dada por:
+
+$$  $$
 
 La tensión inducida en el secundario es:
 
+$$  $$
+
 Debido a la tensión $V_{secundario}-V_o$ existente en bornes del inductor, su corriente se incrementa linealmente:
+
+$$  $$
 
 Esta misma también tendrá su valor máximo en $t=DT$:
 
+$$  $$
 
-Cuando el transistor se encuentre apagado:
-
+\paragraph{Cuando el transistor se encuentre apagado}
 La tensión del transformador toma polaridad negativa, lo cual apaga al diodo D2 y enciende a los diodos D1 y D3. 
 Mientras conduce D3, la energía es entregada a la carga a través del inductor de salida. 
 La corriente por ambos dispositivos es la misma y decrece linealmente con el tiempo:
 
+$$  $$
+
 Lo cual nos da el valor de $I_1(t=0)$:
 
+$$  $$
 
 El diodo $D_1$ y el tercer bobinado del transformador le proporcionan un camino 
 a la corriente magnetizante para que regrese a la fuente de entrada. 
 La tensión de salida es la integral en el tiempo de la tensión del bobinado secundario:
 
+$$  $$
+
 La máxima corriente de colector se da durante el encendido del transistor y la máxima tensión de colector durante el apagado:
 
+$$  $$
 
 Si la corriente debe anularse antes del comienzo de un nuevo período, 
 $t_0<T$
 
-COMPLETAR CON HART Y MATLAB
+$$  $$
 
-CREO QUE ES MÁS COMPLICADO ESTE MÉTODO:
+%COMPLETAR CON HART Y MATLAB
+
+%CREO QUE ES MÁS COMPLICADO ESTE MÉTODO:
 Igualando la integral en el tiempo de la tensión de entrada cuando el transistor está encendido a la tensión $V_r$ cuando el transistor está apagado nos da el ciclo de trabajo máximo:
 
+$$  $$
 
 El ciclo de trabajo debe mantenerse siempre debajo del máximo para evitar la saturación del núcleo del transformador. 
 Para que el flujo magnético vuelva a 0, la corriente debe anularse
  al final de cada ciclo de conmutación para restaurar el núcleo del transformador. 
 Si el núcleo está saturado, se puede dañar el transistor. 
 
-\subsection{Comparación con el conversor flyback}
+\subsection{Comparación con el convertidor flyback}
 
-El conversor forward requiere de una carga mínima para evitar un exceso en la tensión de salida. 
+El convertidor forward requiere de una carga mínima para evitar un exceso en la tensión de salida. 
 Como el transformador no almacena energía, para un mismo nivel de potencia de salida, 
 el tamaño del mismo es menor en el convertidor forward que en el flyback. 
 La corriente de salida es aproximadamente constante ya que el ripple disminuye notablemente 
@@ -174,34 +195,31 @@ debido al agregado del inductor en la salida y al diodo de rueda libre D3.
 Por esto mismo, el capacitor de salida puede ser más pequeño. 
 
 
-\subsection{Conversor Forward Doble Switch}
+\subsection{Convertidor Forward Doble Switch}
 
-El conversor forward se utiliza para potencias de salida de hasta 200W ya que se encuentra limitado 
+El convertidor forward se utiliza para potencias de salida de hasta 200W ya que se encuentra limitado 
 por los esfuerzos de tensión y de corriente durante su funcionamiento. 
-El conversor forward de doble switch permite ser utilizado con potencias de hasta X W debido a la 
+El convertidor forward de doble switch permite ser utilizado con potencias de hasta 750 W debido a la 
 reducción de la tensión en los transistores cuando los mismos se encuentran apagados. 
 Esto permite su uso en aplicaciones de alta tensión mediante transistores de menores prestaciones en tensión. 
 
 \subsubsection{Funcionamiento}
 
-Los transistores se encienden y se apagan de forma simultánea. 
-Cuando los transistores están encendidos, la tensión en el primario del transformador es igual a la tensión de entrada Vs. 
+Los transistores se encienden y se apagan de forma simultánea, lo cual los diferencia de las topologías bridge. 
+Cuando los transistores están encendidos, la tensión en el primario del transformador es igual a la tensión de entrada $V_s$. 
 Como la relación del mismo es 1:1, la misma tensión se establece en su secundario y la energía se transfiere a la carga. 
 Además se incrementa la corriente que circula por la inductancia magnetizante. 
 
 Cuando los transistores se apagan, el diodo D1 evita que la corriente magnetizante circule por el secundario 
 (y por lo tanto también en el primario) del transformador, forzando su camino por los diodos D3 y D4 de regreso a la fuente regulable.  
 Con esto se elimina la necesidad del tercer devanado de desmagnetización. 
-La tensión en el primario del transformador es -Vs, causando un decremento de la corriente magnetizante. 
+La tensión en el primario del transformador es $-V_s$, causando un decremento de la corriente magnetizante. 
 Si la relación de trabajo de los transistores es menor a 0.5, en cada ciclo el núcleo del transformador se restablece, 
 haciendo que el flujo magnético regrese a 0. 
-La tensión en los transistores cuando los mismos se encuentran apagados es Vs y no Vs(1+N1/N3).
+La tensión en los transistores cuando los mismos se encuentran apagados es $V_s$ y no $V_s\left(1+\frac{N_1}{N_3}\right)$.
 
 La tensión de salida resulta:
-$$ V_{o}=V_{s}D(\frac{N_{2}}{N_{1}}) $$
-
-
-
+$$ V_{o}=V_{s}D\left(\frac{N_{2}}{N_{1}}\right) $$
 
 \subsection{Circuitos de control}
 
@@ -215,14 +233,23 @@ Internamente presenta 4 componentes principales:
     \item Un comparador para comparar la señal de salida de error con la señal de dientes de sierra
 \end{enumerate}
 
-Su señal de salida es la que controla a los transistores. 
+La señal de salida del circuito PWM es la que controla a los transistores. 
 
 Para controlar la tensión de salida, los convertidores funcionan con un circuito de retroalimentación,
- en base a la señal realimentada , en un control por tensión o corriente.
+dependiendo de la señal realimentada, en un control por tensión o corriente. En la figura \ref{fig:marco_teorico:control} se muestra un diagrama de bloques del circuito.
+
+\begin{figure}[ht]
+    \centering
+    \includegraphics[width=0.8\textwidth]{images/compensador.png}
+    \caption{Diagrama de bloques del circuito de control}
+    \label{fig:marco_teorico:control}
+\end{figure}
 
 \subsubsection{Control por tensión}
 
-COMPLETAR CON LIBRO
+%COMPLETAR CON LIBRO
+El bloque de control mide la tensión a la salida del convertidor, la escala y la compara con la tensión deseada.
+Esto genera una señal de error, la cual alimenta a un controlador PI.
 
 La duración del tiempo de encendido está determinada por el tiempo entre el reinicio del generador de diente de sierra
 y la intersección del voltaje de error con la señal de rampa positiva. 
